# dcu_hotel_reviews_tutorial

./: README.md  hotel_reviews_tutorial.ipynb  hotel_reviews_tutorial_solution.ipynb  pyproject.toml  requirements.txt
resources/data/: README.txt
resources/data/prompt/: default_prompt.txt
