[project]
name = "dcu_hotel_reviews_tutorial"
version = "0.1.0"
description = "Poetry .toml file for the DCU Hotel Reviews tutorial."
authors = [
    {name = "Saad Mahamood"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "notebook (>=7.3.3,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tdqm (>=0.0.1,<0.0.2)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "lingua-language-detector (>=2.1.0,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
